[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/SpikeAnimation.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Tiles/spike_outline_3.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Tiles/spike_outline_2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Tiles/spike_outline_4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Tiles/spike_2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Tiles/spike_3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Tiles/spike_1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Tiles/spike_outline_1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Tiles/spike_4.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[node name="SpikeAnimation" type="Node2D"]
script = ExtResource( 1 )

[node name="Spike" type="AnimatedSprite" parent="."]
position = Vector2( 26, 12 )
frames = SubResource( 4 )

[node name="SpikeOutline" type="AnimatedSprite" parent="."]
modulate = Color( 0.24, 0.24, 0.24, 1 )
position = Vector2( 26, 12 )
frames = SubResource( 5 )

[connection signal="animation_finished" from="Spike" to="." method="_on_Spike_animation_finished"]
[connection signal="animation_finished" from="SpikeOutline" to="." method="_on_SpikeOutline_animation_finished"]
